--- a/香港局势分析.md
+++ b/香港局势分析.md
@@ -1,15 +1,16 @@
-## 香港问题的根源
+# 香港问题的根源
 
-香港回归后没有去殖民地化，教育上出了严重问题。台湾去殖民地化，不许叫日本名字，李登辉原名岩里政男只好叫李登辉，幼儿园只能学国语，今天台湾的政客国语都非常好。韩国去殖民地化，所有日本教材不许再用了。印度加尔各答将英式拼法改为印式拼法。麦理浩道还叫麦理浩道。皇后大道、圣乔治大道。反而去中国化。
+1.香港回归后没有去殖民地化，教育上出了严重问题。台湾去殖民地化，不许叫日本名字，李登辉原名岩里政男只好叫李登辉，幼儿园只能学国语，今天台湾的政客国语都非常好。韩国去殖民地化，所有日本教材不许再用了。印度加尔各答将英式拼法改为印式拼法。麦理浩道还叫麦理浩道。皇后大道、圣乔治大道。反而去中国化。
 
-内地对香港的支持：大亚湾核电站供给来香港超过1/4的电力，香港政府鼓励居民大肆用电，灯光一天24小时都不带关闭的。在空调房里讨论环保问题。
+2.内地对香港的支持：大亚湾核电站供给来香港超过1/4的电力，香港政府鼓励居民大肆用电，灯光一天24小时都不带关闭的。在空调房里讨论环保问题。
 
-上海每年给中央财政缴税达到6000亿以上，香港一分钱没有交，而且驻港部队的费用都是中央财政补贴。
+3.上海每年给中央财政缴税达到6000亿以上，香港一分钱没有交，而且驻港部队的费用都是中央财政补贴。
 
-深圳不建迪士尼，不都是为了保护香港的迪士尼吗？
+4.深圳不建迪士尼，不都是为了保护香港的迪士尼吗？
 
-什么是中国？南沙群岛驻守官兵来自齐齐哈尔，东沙群岛驻守官兵来自大西北，这就是中国。什么港人治港等都不是完全意义的中国。
+## 什么是中国？
+南沙群岛驻守官兵来自齐齐哈尔，东沙群岛驻守官兵来自大西北，这就是中国。什么港人治港等都不是完全意义的中国。
 
-## 美国公民宣誓
+# 美国公民宣誓
 > "I pledge allegiance to the Flag of the United States of America, and to the republic for which it stands, one Nation under God, indivisible, with liberty and justice for all."
 > “我谨宣誓效忠美利坚合众国国旗及效忠所代表之共和国，上帝之下的国度，不可分裂，自由平等全民皆享。”
