--- a/香港局势分析.md
+++ b/香港局势分析.md
@@ -1,6 +1,8 @@
 # 香港问题的根源
 
-1.香港回归后没有去殖民地化，教育上出了严重问题。台湾去殖民地化，不许叫日本名字，李登辉原名岩里政男只好叫李登辉，幼儿园只能学国语，今天台湾的政客国语都非常好。韩国去殖民地化，所有日本教材不许再用了。印度加尔各答将英式拼法改为印式拼法。麦理浩道还叫麦理浩道。皇后大道、圣乔治大道。反而去中国化。
+## 香港回归后没有去殖民地化，教育上出了严重问题
+
+1.台湾去殖民地化，不许叫日本名字，李登辉原名岩里政男只好叫李登辉，幼儿园只能学国语，今天台湾的政客国语都非常好。韩国去殖民地化，所有日本教材不许再用了。印度加尔各答将英式拼法改为印式拼法。麦理浩道还叫麦理浩道。皇后大道、圣乔治大道。反而去中国化。
 
 2.内地对香港的支持：大亚湾核电站供给来香港超过1/4的电力，香港政府鼓励居民大肆用电，灯光一天24小时都不带关闭的。在空调房里讨论环保问题。
 
